Bug 115155 - FILEOPEN: RTF: left indent is lost in second list
Summary: FILEOPEN: RTF: left indent is lost in second list
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.1.0 target:6.0.1
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2018-01-22 18:48 UTC by Xisco Faulí
Modified: 2018-02-14 11:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.1 (223.19 KB, image/png)
2018-01-22 18:48 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-01-22 18:48:31 UTC
Created attachment 139268 [details]
comparison MSO 2010 and LibreOffice 6.1

Steps to reproduce:
1. Open attachment 103959 [details] from bug 82107
2. Check the second list at the end of the first page-> Left indent is 0. See attached image

The document can be created from scratch in MSO Word as well:
1. Create a list with 2 items
2. On the third item restart at 1
3. Move the second list to the right
4. Save it as .RTF
5. Open it with master


Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: de1bb0878fc7d7eb6071ec94d770712648013075
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-01-22 18:50:45 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2017-12-05 09:17:43 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-12-05 13:51:22 +0100
commit c9dee880d88305312094b311abdae155e452bf14 (patch)
tree ffb696d6400bc451095cd9db40f607dd10154f70
parent 75e828cad5e652f111278b103b72b9a9a344b689 (diff)
tdf#104016 RTF import: deduplicate before text indent from numbering
We already deduplicated first line indentation since commit 3915bf2dc877d5f1140798e24933db0f21386a4a (tdf#95376 DOCX import: fix
incorrectly indented tab stops, 2016-01-26), the same is necessary for
before text indent.

Bisected with: bibisect-linux64-6.1

Adding Cc: to Miklos Vajna
Comment 2 Xavier Van Wijmeersch 2018-01-23 13:29:01 UTC
repro with

Version: 6.0.0.2
Build ID: 06b618bb6f431d27fd2def25aa19c833e29b61cd
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group

Version: 6.0.1.0.0+
Build ID: 4bfa6ad5ca95bdcee12f8cd0544b5f08558050c5
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 3 Commit Notification 2018-01-30 08:06:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7655001a65a250ea7cd70f2efcc78037b5a9813f

tdf#115155 RTF import: fix left indent handling inside list definition

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-01-30 10:15:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=697359f63e392a73fe3c34635819706a93e5c6b1&h=libreoffice-6-0

tdf#115155 RTF import: fix left indent handling inside list definition

It will be available in 6.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2018-02-01 16:40:53 UTC
*** Bug 115242 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2018-02-14 11:30:27 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 03cee02464f230a2efa67d131c137f32fe540052
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group