writerfilter/source/dmapper/DomainMapper.cxx
@@ -1334,6 +1334,7 @@ void DomainMapper::sprmWithProps( Sprm& rSprm, const PropertyMapPtr& rContext )
                     // So no situation where keeping indentation at this point would make sense -> erase.
                     rContext->Erase(PROP_PARA_FIRST_LINE_INDENT);
                     rContext->Erase(PROP_PARA_LEFT_MARGIN);
+                    rContext->Erase(PROP_PARA_RIGHT_MARGIN);
                 }
             }
             else
